Okay. So my original code didn't actually work. Now I have the code working. There are some changes needed to the data in the db, but that shouldn't take too long to fix. While I was waiting between the last commit and midnight so I could test this, I found a hack to increase the size of the facebook button. And hence, it has returned to the mobile version. I have since determined this update is fit for consumption by the masses.

--- a/desktop.css
+++ b/desktop.css
@@ -177,6 +177,21 @@ body {
 	height: auto;
 }
 
+iframe[src^="http://www.facebook.com"]
+{
+	transform: scale(1.75);
+	-ms-transform: scale(1.75); 
+	-webkit-transform: scale(1.75); 
+	-o-transform: scale(1.75); 
+	-moz-transform: scale(1.75); 
+	transform-origin: center;
+	-ms-transform-origin: center;
+	-webkit-transform-origin: center;
+	-moz-transform-origin: center;
+	-webkit-transform-origin: center;
+	padding-bottom: 10px;
+}
+
 #footer A:link {color: #FFF;}
 #footer A:visited {color: #F0F;}
 #footer A:active {color: #FFF;}
